--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <a href="product.html" class="btn btn-light btn-lg">Order</a>
         </div>
 
-        <img src="img/logo.jpg" alt="logo" style="border-radius: 100%; width: 400; height: 400;">
+        <div class="col-md-4 mx-auto">
+            <img src="img/logo.jpg" alt="CAKE BY PAVI logo" class="img-fluid rounded-circle" style="max-width: 200px;">
+        </div>
     </header>
 
     <main class="container my-5">
